sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart:Int=getNombreValeurs()
  var c:Int =1
  do {
    var c:int=1
    if (ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    var i:Int =0
    while (i+ecart<getNombreValeurs()){
      if (plusPetit(i,i+ecart)){
        echange(i,i+ecart)
        i+=1
        c=0
      }
    }
  }
  while(ecart>1 || c==0)
      }

 


